'shared' and 'inherited' scope prac1 complete :)

--- a/ng-register/builds/angularregistration/js/directives/temps/temp.user-info-card.html
+++ b/ng-register/builds/angularregistration/js/directives/temps/temp.user-info-card.html
@@ -4,8 +4,8 @@
 	<hr>
 	
 	<!-- Card Body -->
-	<div ng-hide="collapsed">
-		<p>Welcome {{user.name}}</p>
+	<div ng-hide="!!collapsed">
+		<p>Welcome <strong>{{user.name}}</strong></p>
 		<address></address>
 		
 		<br>
