practiced using  scope binded to parent functions

--- a/ng-register/builds/angularregistration/js/directives/temps/temp.user-info-card.html
+++ b/ng-register/builds/angularregistration/js/directives/temps/temp.user-info-card.html
@@ -12,7 +12,7 @@
 		<p>Friends:</p>
 		<ul>
 			<li ng-repeat="friend in user.friends" class="j-friends">
-				{{friend}} &nbsp; <ja-remove-friend remove-a-friend="removeFriend(friend)"></ja-remove-friend>
+				{{friend}} &nbsp; <ja-remove-friend-btn remove-a-friend="removeFriend(friend)"></ja-remove-friend-btn>
 			</li>
 		</ul>
 		
